# magnitude

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  version.py
pymagnitude/: __init__.py  converter.py  converter_shared.py
tests/: tests.py
